# s1t-sddd-flaskapi-shop

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO  docker-compose.yml  passenger_wsgi.py  pyproject.toml  requirements.txt
data/: migrate_taxonomy.py  seed.py  seed_config.yaml
docs/: adding_new_table.md  api_admin.md  api_public.md  catalog_taxonomy_plan.md  code_review.md  cpanel.md  database.md  development_guidelines.md  filters.md
src/access/: config.py  permissions.py  provider.py
src/access/app/: __init__.py  commands.py  interfaces.py  runtime_permissions.py
src/access/domain/: __init__.py  errors.py  user_agg.py
src/catalog/: config.py  provider.py
src/catalog/app/: __init__.py
src/catalog/domain/: __init__.py  errors.py  product_agg.py  taxonomy.py
src/ordering/: config.py  provider.py
src/ordering/app/: __init__.py  commands.py  errors.py
src/ordering/domain/: __init__.py  errors.py  order_agg.py  order_status.py
src/root/: config.py  container.py
src/root/entrypoints/: api.py
src/shared/: config.py  provider.py
src/shared/domain/: value_objects.py
src/shared/generics/: errors.py  pagination.py
src/shared/helpers/: db.py  parsing.py  security.py
src/system/: config.py  provider.py
src/system/app/: __init__.py  commands.py
src/system/domain/: __init__.py  errors.py  settings_agg.py
static/css/: image-editor.css  layout.css  vars.css
static/js/: api.js  attribute-form.js  catalog-workspace.js  image-editor.js  lightbox.js  modal.js  smart-table.js  tag-picker.js  taxonomy-tree.js  utils.js
(+140 files in other folders)
